wither_derive/tests/fail/field-id-incorrect-type.stderr
error[E0308]: mismatched types
 --> $DIR/field-id-incorrect-type.rs:4:34
  |
4 | #[derive(Serialize, Deserialize, Model)]
  |                                  ^^^^^
  |                                  |
  |                                  expected struct `bson::oid::ObjectId`, found struct `std::string::String`
  |                                  expected `std::option::Option<bson::oid::ObjectId>` because of return type
  |
  = note: expected enum `std::option::Option<bson::oid::ObjectId>`
             found enum `std::option::Option<std::string::String>`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/field-id-incorrect-type.rs:4:34
  |
4 | #[derive(Serialize, Deserialize, Model)]
  |                                  ^^^^^
  |                                  |
  |                                  expected struct `std::string::String`, found struct `bson::oid::ObjectId`
  |                                  help: try using a conversion method: `Model.to_string()`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
